Fixed ui bug on IE11 and try to fix auto complete in new-database

--- a/static/css/primate.css
+++ b/static/css/primate.css
@@ -624,7 +624,7 @@ button.close {
 
 .metro .btn-lead:hover {
     background-color: #217dbb;
-    color: #fff;
+    color: #fff!important;
     border: 1px #1d6fa5 solid;
 }
 
